--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,30 +1,35 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: ruby:2.3
-      - image: postgres:9.4.1
-        environment:
-          POSTGRES_USER: root
 
-    working_directory: ~/darcyWeb/
-    steps:
-      - checkout
-      - run:
-          name: Install System Dependencies
-          command: apt-get update -qq && apt-get install -y build-essential nodejs
-      - run:
-          name: Install Ruby Dependencies
-          command: cd darcyWeb && bundle install
-      - run:
-          name: Create DB
-          command: cd darcyWeb && bundle exec rake db:create db:schema:load --trace
-      - run:
-          name: DB Migrations
-          command: cd darcyWeb && bundle exec rake db:migrate
-      - run:
-          name: Run Tests
-          command: cd darcyWeb && bundle exec rake test
-      exclude_paths:
-          - darcyWeb/vendor/assets/javascripts/admin/app.js/**/*
-          - "**/vendor/assets/javascripts/admin/vendor.js/**/*"
+engines:
+  brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
+  rubocop:
+    enabled: true
+  reek:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+  fixme:
+    enabled: true
+
+ratings:
+  paths:
+  - Gemfile.lock
+  - app/**
+  - lib/**
+  - "**.rb"
+  - "**.erb"
+  - "**.js"
+  - "**.css"
+
+exclude_paths:
+- db/
+- spec/
+- test/
+- vendor/darcyWeb/vendor/assets
+      
