--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,7 @@ jobs:
       - run:
           name: Run Tests
           command: cd darcyWeb && bundle exec rake test
+          
+      exclude_paths:
+        - "vendor/assets/javascripts/admin"
+        - "**/vendor/"
