--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,5 +27,6 @@ jobs:
           command: cd darcyWeb && bundle exec rake test
           
       exclude_paths:
-        - vendor/assets/javascripts/admin/*
+      - darcyWeb/vendor/assets/javascripts/admin/vendor.js
+      - darcyWeb/vendor/assets/javascripts/admin/app.js
 
