--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,12 @@
 ---
 engines:
-  csslint:
+ brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
+  rubocop:
+    enabled: true
+  reek:
     enabled: true
   duplication:
     enabled: true
@@ -14,12 +20,18 @@ engines:
     enabled: true
 ratings:
   paths:
-  - "**.css"
-  - "**.js"
-  - "**.jsx"
-  - "**.module"
+  - Gemfile.lock
+  - app/**
+  - lib/**
   - "**.rb"
+  - "**.erb"
+  - "**.js"
+  - "**.css"
 
 exclude_paths:
 - javascript/admin/vendor.js
 - javascript/admin/app.js
+
+
+
+
