--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,5 @@
----
 engines:
- brakeman:
+  brakeman:
     enabled: true
   bundler-audit:
     enabled: true
@@ -16,8 +15,7 @@ engines:
       - javascript
   fixme:
     enabled: true
-  radon:
-    enabled: true
+
 ratings:
   paths:
   - Gemfile.lock
@@ -29,9 +27,7 @@ ratings:
   - "**.css"
 
 exclude_paths:
-- javascript/admin/vendor.js
+- javascript/admin/vendor.js/
 - javascript/admin/app.js
-
-
 
 
