--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,33 +1,32 @@
 engines:
-  brakeman:
-    enabled: true
-  bundler-audit:
-    enabled: true
   rubocop:
     enabled: true
-  reek:
+    #checks:
+    #	Rubocop/Metrics/ClassLength:
+    #  	enabled: false
+  brakeman:
+   	enabled: true
+    #exclude_fingerprints:
+    #- 08c185b3f764f262539a1f76997d3a89
+  eslint:
+    enabled: true
+  csslint:
     enabled: true
   duplication:
-    enabled: true
+  	enabled: true
     config:
-      languages:
+    	languages:
       - ruby
+      	#mass_threshold: 30
       - javascript
-  fixme:
-    enabled: true
-
 ratings:
   paths:
-  - Gemfile.lock
   - app/**
   - lib/**
   - "**.rb"
-  - "**.erb"
-  - "**.js"
-  - "**.css"
-
+  - "**.go"
 exclude_paths:
-- javascript/admin/vendor.js/
+- javascript/admin/vendor.js
 - javascript/admin/app.js
 
 
