--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,13 +1,13 @@
 engines:
   rubocop:
     enabled: true
-    #checks:
-    #	Rubocop/Metrics/ClassLength:
-    #  	enabled: false
+    checks:
+    	Rubocop/Metrics/ClassLength:
+      	enabled: false
   brakeman:
    	enabled: true
-    #exclude_fingerprints:
-    #- 08c185b3f764f262539a1f76997d3a89
+    exclude_fingerprints:
+    - 08c185b3f764f262539a1f76997d3a89
   eslint:
     enabled: true
   csslint:
@@ -17,7 +17,7 @@ engines:
     config:
     	languages:
       - ruby
-      	#mass_threshold: 30
+      	mass_threshold: 30
       - javascript
 ratings:
   paths:
@@ -26,7 +26,7 @@ ratings:
   - "**.rb"
   - "**.go"
 exclude_paths:
-- javascript/admin/vendor.js
+- darcyWeb/vendor/assets/javascripts/admin/vendor.js
 - javascript/admin/app.js
 
 
