--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,30 @@
+engines:
+  brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
+  rubocop:
+    enabled: true
+  reek:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+  fixme:
+    enabled: true
+
+ratings:
+  paths:
+  - Gemfile.lock
+  - app/**
+  - lib/**
+  - "**.rb"
+  - "**.erb"
+  - "**.js"
+  - "**.css"
 
 exclude_paths:
 - javascript/admin/vendor.js
